--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class ="logo">
-            <img src = "img/devjane.png" alt = "">
+            <img src = "devjane.png" alt = "">
         </div>
         <button class = "nav-toggle" aria-label="toggle navigation">
             <span class = "hamburger"></span>
@@ -38,12 +38,12 @@
             The title <strong>of my project</strong>
         </h1>
         <p class = "section__subtitle section__subtitle--intro">A short subtitle</p>
-        <img src = "img/portfolio-01.jpg" alt =""  class = "intro__img">
+        <img src = "portfolio-01.jpg" alt =""  class = "intro__img">
     </section>
 
     <div class="portfolio-item-individual">
         <p>Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?</p>
-        <img src = "img/portfolio-details.jpg" alt ="">
+        <img src = "portfolio-details.jpg" alt ="">
         <p>Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?</p>
         <p>Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?</p>
     </div>
@@ -78,7 +78,7 @@
         
     </footer>
 
-    <script src = "promenjen.js"></script>
+    <script src = "index.js"></script>
 
    
 </body>
